# codex-sdd

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml  release.yml
docs/sdd/: README.md  USAGE.md
packaging/: README.md
packaging/homebrew/: codex-sdd.rb
packaging/npm/: package.json
packaging/npm-platforms/darwin-arm64/: README.md  package.json
packaging/npm-platforms/darwin-x64/: README.md  package.json
packaging/npm-platforms/linux-arm64/: README.md  package.json
packaging/npm-platforms/linux-x64/: README.md  package.json
packaging/npm-platforms/win32-x64/: README.md  package.json
src/: main.rs
src/analysis/: index.rs
src/codex/: exec.rs
src/core/: paths.rs  state.rs
src/docs/: templates.rs
src/git/: worktree.rs
src/quality/: coverage.rs  mod.rs  tests.rs
src/util/: mod.rs
